<resources>
    <string name="app_name">CAP</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="map_fragment_label">Carte interactive</string>
    <string name="add_fragment_label">Ajout d\'un site</string>
    <string name="previous">Précédent</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
    </string>
    <string name="addAPlace">Navigate to second fragment to add a place</string>
    <string name="add_place">Ajout d\'un lieu</string>
    <string name="place_name">Nom du lieu</string>
    <string name="place_name_placeholder">Entrez le nom du lieu</string>
    <string name="illustrations">Illustrations</string>
    <string name="illustrations_selection">Sélectionner des photos du site</string>
    <string name="illustrations_selected">Aucune photo sélectionnée</string>
    <string name="place_map">Plan du site</string>
    <string name="place_map_selection">Sélectionner le plan</string>
    <string name="place_map_selected">Aucun plan sélectionné</string>
    <string name="description">Descriptif</string>
    <string name="place_description">Description du site</string>
    <string name="save">Enregistrer</string>
    <string name="contact">Contact</string>
    <string name="contact_list">"Téléphone / Email "</string>
</resources>