<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_place"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place_name"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/place_name_placeholder"
            android:inputType="textCapWords"
            android:textColor="@color/text"
            android:maxLines="1"
            android:padding="12dp"
            android:background="@android:drawable/editbox_background"
            android:layout_marginBottom="20dp" />

        <!-- Photos -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/illustrations"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/button_add_pictures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/illustrations_selection"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/textview_selected_pictures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/illustrations_selected"
            android:textColor="#666666"
            android:layout_marginBottom="20dp" />

        <!-- Plan -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_map"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/button_add_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_map_selection"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/textView_selected_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_map_selected"
            android:textColor="#666666"
            android:layout_marginBottom="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/edit_text_description"
            android:layout_width="match_parent"
            android:maxWidth="20dp"
            android:layout_height="150dp"
            android:autofillHints=""
            android:hint="@string/place_description"
            android:textColor="@color/text"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:padding="12dp"
            android:background="@android:drawable/editbox_background"
            android:layout_marginBottom="24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/edit_text_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/contact_list"
            android:textColor="@color/text"
            android:inputType="text"
            android:maxLines="1"
            android:padding="12dp"
            android:background="@android:drawable/editbox_background"
            android:layout_marginBottom="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="150dp"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/button_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/previous"
                    android:textSize="16sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/button_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
